# Tokenomist

./: .gitignore  CHANGELOG.md  FORMAT.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
data/samples/: chatgpt_openai.json  claude_native.json  custom_agent_native.json  gemini_google.json  langgraph_agent.json
docs/: case-study.md
harness/: README.md  run_agent.py
harness/tasks/merge_intervals/: reference_solution.py  solution.py  task.md  test_solution.py
src/agenttracelab/: __init__.py  analyzer.py  cli.py  dashboard.py  models.py  pricing.py  report.py  router.py
src/agenttracelab/parsers/: native.py
src/tokenomist/: analyzer.py  models.py  prices.json  pricing.py  report.py
src/tokenomist/parsers/: native.py
tests/: test_analyzer.py  test_cli.py  test_harness.py  test_parsers.py  test_pricing_tokens.py
